<resources>
    <string name="app_name">Hold My Cards</string>
    <string name="name">Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="wechat">Wechat</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_notice">Enter you Email address below and we will help log you in</string>
    <string name="submit">Submit</string>
    <string name="remainder">Reminder</string>
    <string name="note">Note</string>
    <string name="calender">Calender</string>
    <string name="add_note">Add Note</string>
    <string name="add_remainder">Add Reminder</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="version">Version:</string>
    <string name="crop_image_menu_crop">Process</string><!--
    <string name="facebook_app_id">153589605499502</string>
    <string name="fb_login_protocol_scheme">fb153589605499502</string>-->
    <string name="facebook_app_id">200864567249064</string>
    <string name="fb_login_protocol_scheme">fb200864567249064</string>

    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="save_contact">Save Contact</string>
    <string name="twitter">Twitter</string>
    <string name="my_library">My Library</string>
    <string name="my_groups">My Groups</string>
    <string name="search_for_peopple_to_add">Search for people to add</string>
    <string name="share">Share</string>
    <string name="download">Download</string>


</resources>
