<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context="com.forzo.holdMyCard.ui.activities.forgetpassword.ForgetPasswordActivity">


    <TextView

        android:id="@+id/email_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_notice"
        android:textSize="18sp"
        android:lineSpacingExtra="4dp"
        android:layout_margin="24dp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/email_forget"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/email_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_forget"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg"
        android:text="@string/submit"
        android:textAllCaps="false" />

</RelativeLayout>
