<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.forzo.holdMyCard.ui.activities.login.LoginActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/login_section"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/register_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textSize="18sp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/login_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_title"
                    android:layout_marginTop="24dp">

                    <EditText
                        android:id="@+id/email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/login_bg"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />


                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_id"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/login_bg"
                        android:hint="@string/password"
                        android:inputType="textPassword" />


                    <TextView
                        android:id="@+id/forget_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/password"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/forgot_password"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/forget_pass"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/login"
                        android:textAllCaps="false" />

                    <TextView
                        android:id="@+id/or_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/or"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/fb_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/or_text"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/facebook"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/wechat_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fb_button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/wechat"
                        android:textAllCaps="false" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/register_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_title"
                    android:layout_marginTop="24dp"
                    android:visibility="gone">


                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/login_bg"
                        android:hint="@string/name" />


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/login_bg"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/login_bg"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/conform_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/register_password"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/login_bg"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />


                    <Button
                        android:id="@+id/register_side_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/conform_password"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/register"
                        android:textAllCaps="false" />

                    <TextView
                        android:id="@+id/or_text_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/register_side_button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/or"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/fb_button_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/or_text_register"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/facebook"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/wechat_button_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fb_button_register"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/wechat"
                        android:textAllCaps="false" />

                </RelativeLayout>
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <include layout="@layout/activity_loader" />

</RelativeLayout>
